--- a/index.html
+++ b/index.html
@@ -1,155 +1,156 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-<meta charset="UTF-8" />
-<title>BIM As-Built Tour</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<link rel="stylesheet" href="style.css">
-
-<script src="https://unpkg.com/three@0.128.0/build/three.min.js"></script>
-<script src="https://unpkg.com/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
+    <meta charset="UTF-8">
+    <title>جولة BIM-As-built</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/three@0.128.0/build/three.min.js"></script>
+    <script src="https://unpkg.com/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
 </head>
-
 <body>
+    <div id="container"></div>
+    <button id="autoRotateBtn">⏸️ إيقاف الدوران</button>
 
-<div id="ui">
-  <div id="sceneList"></div>
+    <script>
+        let autoRotate = true;
+        let currentSceneIndex = 0;
+        let scenes = [];
+        let scene3D, camera, renderer, controls, sphereMesh;
 
-  <div id="layers">
-    <label><input type="checkbox" data-layer="EL" checked> EL</label>
-    <label><input type="checkbox" data-layer="WP" checked> WP</label>
-    <label><input type="checkbox" data-layer="AC" checked> AC</label>
-  </div>
-</div>
+        // تحميل البيانات
+        fetch('tour-data.json')
+            .then(res => res.json())
+            .then(data => {
+                scenes = data.scenes;
 
-<button id="rotateBtn">⏸️ إيقاف الدوران</button>
+                scene3D = new THREE.Scene();
+                scene3D.background = new THREE.Color(0x000000);
 
-<div id="container"></div>
+                camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+                camera.position.set(0,0,0.1);
 
-<script>
-let scene3D, camera, renderer, controls, sphere;
-let allLayers = { EL: [], WP: [], AC: [] };
-let scenesData = [];
-let autoRotate = true;
+                renderer = new THREE.WebGLRenderer({antialias:true});
+                renderer.setSize(window.innerWidth, window.innerHeight);
+                document.getElementById('container').appendChild(renderer.domElement);
 
-init();
+                controls = new THREE.OrbitControls(camera, renderer.domElement);
+                controls.enableZoom = true;
+                controls.enablePan = false;
+                controls.enableDamping = true;
+                controls.autoRotate = autoRotate;
+                controls.autoRotateSpeed = 0.5;
 
-function init() {
-  fetch("tour-data.json")
-    .then(r => r.json())
-    .then(data => {
-      scenesData = data.scenes;
-      setupScene();
-      buildSceneList();
-      loadScene(0);
-      animate();
-    })
-    .catch(err => console.error("JSON ERROR:", err));
-}
+                // زر تشغيل/إيقاف الدوران
+                document.getElementById('autoRotateBtn').onclick = () => {
+                    autoRotate = !autoRotate;
+                    controls.autoRotate = autoRotate;
+                    document.getElementById('autoRotateBtn').textContent = autoRotate ? '⏸️ إيقاف الدوران' : '▶️ تشغيل الدوران';
+                };
 
-function setupScene() {
-  scene3D = new THREE.Scene();
+                // تحميل المشهد
+                function loadScene(index) {
+                    const sceneData = scenes[index];
+                    if(!sceneData) return;
 
-  camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 2000);
-  camera.position.set(0,0,0.1);
+                    currentSceneIndex = index;
 
-  renderer = new THREE.WebGLRenderer({ antialias:true });
-  renderer.setSize(window.innerWidth, window.innerHeight);
-  document.getElementById("container").appendChild(renderer.domElement);
+                    // إزالة المشهد السابق
+                    if(sphereMesh) scene3D.remove(sphereMesh);
+                    document.querySelectorAll('.hotspot').forEach(el => el.remove());
 
-  controls = new THREE.OrbitControls(camera, renderer.domElement);
-  controls.enableZoom = true;
-  controls.enablePan = false;
-  controls.autoRotate = true;
-  controls.autoRotateSpeed = 0.5;
+                    // إضافة الكرة
+                    new THREE.TextureLoader().load(sceneData.image, texture => {
+                        texture.wrapS = THREE.RepeatWrapping;
+                        texture.wrapT = THREE.RepeatWrapping;
+                        texture.repeat.x = -1;
 
-  window.addEventListener("resize", onResize);
+                        const geometry = new THREE.SphereGeometry(500,128,128);
+                        const material = new THREE.MeshBasicMaterial({map:texture, side:THREE.BackSide});
+                        sphereMesh = new THREE.Mesh(geometry, material);
+                        scene3D.add(sphereMesh);
 
-  document.getElementById("rotateBtn").onclick = () => {
-    autoRotate = !autoRotate;
-    controls.autoRotate = autoRotate;
-    document.getElementById("rotateBtn").innerText =
-      autoRotate ? "⏸️ إيقاف الدوران" : "▶️ تشغيل الدوران";
-  };
+                        // إضافة المسارات (Paths)
+                        if(sceneData.paths){
+                            sceneData.paths.forEach(path=>{
+                                const points = path.points.map(p=>new THREE.Vector3(p[0],p[1],p[2]));
+                                for(let i=0;i<points.length-1;i++){
+                                    const start=points[i], end=points[i+1];
+                                    const dir = new THREE.Vector3().subVectors(end,start);
+                                    const dist = dir.length();
+                                    if(dist<1) continue;
+                                    const cyl = new THREE.Mesh(
+                                        new THREE.CylinderGeometry(2,2,dist,12),
+                                        new THREE.MeshStandardMaterial({color:path.color || 0xffffff, emissive:path.color || 0xffffff, emissiveIntensity:0.3})
+                                    );
+                                    const q = new THREE.Quaternion().setFromUnitVectors(new THREE.Vector3(0,1,0),dir.clone().normalize());
+                                    cyl.applyQuaternion(q);
+                                    const center = new THREE.Vector3().addVectors(start,end).multiplyScalar(0.5);
+                                    cyl.position.copy(center);
+                                    scene3D.add(cyl);
+                                }
+                            });
+                        }
 
-  document.querySelectorAll("#layers input").forEach(cb=>{
-    cb.addEventListener("change",()=>{
-      allLayers[cb.dataset.layer].forEach(m=>m.visible = cb.checked);
-    });
-  });
-}
+                        // إضافة الـ Hotspots
+                        if(sceneData.hotspots){
+                            setTimeout(()=>{
+                                sceneData.hotspots.forEach(hotspot=>{
+                                    const vector = new THREE.Vector3(hotspot.position[0],hotspot.position[1],hotspot.position[2]).project(camera);
+                                    const x = (vector.x*0.5+0.5)*window.innerWidth;
+                                    const y = (-vector.y*0.5+0.5)*window.innerHeight;
+                                    if(x<0||x>window.innerWidth||y<0||y>window.innerHeight) return;
 
-function buildSceneList(){
-  const list = document.getElementById("sceneList");
-  list.innerHTML = "";
-  scenesData.forEach((s,i)=>{
-    const btn = document.createElement("button");
-    btn.textContent = s.name;
-    btn.onclick = ()=> loadScene(i);
-    list.appendChild(btn);
-  });
-}
+                                    const div=document.createElement('div');
+                                    div.className='hotspot';
+                                    div.style.left=x+'px';
+                                    div.style.top=y+'px';
 
-function loadScene(index){
-  const data = scenesData[index];
+                                    if(hotspot.type==='INFO'){
+                                        div.style.color='#ffaa44';
+                                        div.innerHTML=`<span class='hotspot-icon'>ℹ️</span>
+                                            <div class='hotspot-tooltip'>
+                                            <strong>${hotspot.title}</strong>
+                                            <p>${hotspot.content}</p>
+                                            </div>`;
+                                        div.onclick = e=>{
+                                            e.stopPropagation();
+                                            alert(`${hotspot.title}\n\n${hotspot.content}`);
+                                        };
+                                    } else {
+                                        div.style.color='#44aaff';
+                                        div.innerHTML=`<span class='hotspot-icon'>🚪</span>
+                                            <div class='hotspot-tooltip'>
+                                            <strong>انتقال إلى: ${hotspot.target}</strong>
+                                            </div>`;
+                                        div.onclick = e=>{
+                                            e.stopPropagation();
+                                            const targetIndex = scenes.findIndex(s=>s.id===hotspot.targetId);
+                                            if(targetIndex!==-1) loadScene(targetIndex);
+                                        };
+                                    }
+                                    document.body.appendChild(div);
+                                });
+                            },200);
+                        }
+                    });
+                }
 
-  if(sphere) scene3D.remove(sphere);
-  Object.values(allLayers).flat().forEach(m=>scene3D.remove(m));
-  allLayers = { EL:[], WP:[], AC:[] };
+                loadScene(0);
 
-  new THREE.TextureLoader().load(data.image, tex=>{
-    tex.wrapS = THREE.RepeatWrapping;
-    tex.repeat.x = -1;
+                window.addEventListener('resize', ()=>{
+                    camera.aspect=window.innerWidth/window.innerHeight;
+                    camera.updateProjectionMatrix();
+                    renderer.setSize(window.innerWidth,window.innerHeight);
+                });
 
-    sphere = new THREE.Mesh(
-      new THREE.SphereGeometry(500,128,128),
-      new THREE.MeshBasicMaterial({ map: tex, side: THREE.BackSide })
-    );
-    scene3D.add(sphere);
-  });
-
-  data.paths.forEach(p=>{
-    const color =
-      p.type==="EL" ? 0xff4444 :
-      p.type==="WP" ? 0x44aaff :
-      0x44ff88;
-
-    for(let i=0;i<p.points.length-1;i++){
-      const a = new THREE.Vector3(...p.points[i]);
-      const b = new THREE.Vector3(...p.points[i+1]);
-      const dir = new THREE.Vector3().subVectors(b,a);
-      const len = dir.length();
-
-      const mesh = new THREE.Mesh(
-        new THREE.CylinderGeometry(2,2,len,8),
-        new THREE.MeshStandardMaterial({ color })
-      );
-
-      mesh.quaternion.setFromUnitVectors(
-        new THREE.Vector3(0,1,0),
-        dir.clone().normalize()
-      );
-      mesh.position.copy(a.clone().add(b).multiplyScalar(0.5));
-
-      scene3D.add(mesh);
-      allLayers[p.type].push(mesh);
-    }
-  });
-}
-
-function animate(){
-  requestAnimationFrame(animate);
-  controls.update();
-  renderer.render(scene3D,camera);
-}
-
-function onResize(){
-  camera.aspect = window.innerWidth/window.innerHeight;
-  camera.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth, window.innerHeight);
-}
-</script>
-
+                function animate(){
+                    requestAnimationFrame(animate);
+                    controls.update();
+                    renderer.render(scene3D,camera);
+                }
+                animate();
+            });
+    </script>
 </body>
 </html>
