--- a/index.html
+++ b/index.html
@@ -1,133 +1,160 @@
-<!DOCTYPE html>
+Q<!DOCTYPE html>
 <html lang="ar">
 <head>
     <meta charset="UTF-8">
     <title>جولة BIM-As-built</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- مهم جدا لـ GitHub Pages -->
     <base href="/BIM-As-built-sempl/">
-
     <link rel="stylesheet" href="style.css">
-
     <script src="https://unpkg.com/three@0.128.0/build/three.min.js"></script>
     <script src="https://unpkg.com/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
 </head>
 <body>
+    <div id="container"></div>
+    <button id="autoRotateBtn">⏸️ إيقاف الدوران</button>
 
-<div id="container"></div>
-<button id="autoRotateBtn">⏸️ إيقاف الدوران</button>
+    <script>
+        let autoRotate = true;
+        let currentSceneIndex = 0;
+        let scenes = [];
+        let scene3D, camera, renderer, controls, sphereMesh;
 
-<script>
-let scenes = [];
-let scene3D, camera, renderer, controls, sphereMesh;
-let autoRotate = true;
+        function normalizeColor(color) {
+            if (typeof color === 'number') return color;
+            if (typeof color === 'string' && color.startsWith('#')) {
+                return parseInt(color.substring(1), 16);
+            }
+            return 0xffffff;
+        }
 
-fetch("tour-data.json")
-.then(r => r.json())
-.then(data => {
-    scenes = data.scenes;
+        fetch('tour-data.json')
+            .then(res => res.json())
+            .then(data => {
+                scenes = data.scenes;
+                console.log('✅ JSON تم تحميله:', scenes);
 
-    scene3D = new THREE.Scene();
+                scene3D = new THREE.Scene();
+                scene3D.background = new THREE.Color(0x000000);
 
-    camera = new THREE.PerspectiveCamera(
-        75,
-        window.innerWidth / window.innerHeight,
-        0.1,
-        1100
-    );
-    camera.position.set(0, 0, 0.1);
+                camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+                camera.position.set(0,0,0.1);
 
-    renderer = new THREE.WebGLRenderer({ antialias: true });
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.getElementById("container").appendChild(renderer.domElement);
+                renderer = new THREE.WebGLRenderer({antialias:true});
+                renderer.setSize(window.innerWidth, window.innerHeight);
+                document.getElementById('container').appendChild(renderer.domElement);
 
-    controls = new THREE.OrbitControls(camera, renderer.domElement);
-    controls.enableDamping = true;
-    controls.enablePan = false;
-    controls.autoRotate = true;
-    controls.autoRotateSpeed = 0.5;
+                controls = new THREE.OrbitControls(camera, renderer.domElement);
+                controls.enableZoom = true;
+                controls.enablePan = false;
+                controls.enableDamping = true;
+                controls.autoRotate = autoRotate;
+                controls.autoRotateSpeed = 0.5;
 
-    document.getElementById("autoRotateBtn").onclick = () => {
-        autoRotate = !autoRotate;
-        controls.autoRotate = autoRotate;
-        document.getElementById("autoRotateBtn").textContent =
-            autoRotate ? "⏸️ إيقاف الدوران" : "▶️ تشغيل الدوران";
-    };
+                document.getElementById('autoRotateBtn').onclick = () => {
+                    autoRotate = !autoRotate;
+                    controls.autoRotate = autoRotate;
+                    document.getElementById('autoRotateBtn').textContent = autoRotate ? '⏸️ إيقاف الدوران' : '▶️ تشغيل الدوران';
+                };
 
-    loadScene(0);
-    animate();
-});
+                function loadScene(index) {
+                    const sceneData = scenes[index];
+                    if(!sceneData) return;
 
-function loadScene(index) {
-    const data = scenes[index];
-    if (!data) return;
+                    currentSceneIndex = index;
+                    console.log('تحميل المشهد:', sceneData.name, 'الصورة:', sceneData.image);
 
-    if (sphereMesh) scene3D.remove(sphereMesh);
-    document.querySelectorAll(".hotspot").forEach(h => h.remove());
+                    if(sphereMesh) scene3D.remove(sphereMesh);
+                    document.querySelectorAll('.hotspot').forEach(el => el.remove());
 
-    new THREE.TextureLoader().load(
-        data.image,
-        texture => {
-            texture.wrapS = THREE.RepeatWrapping;
-            texture.repeat.x = -1;
+                    new THREE.TextureLoader().load(
+                        sceneData.image,
+                        texture => {
+                            texture.wrapS = THREE.RepeatWrapping;
+                            texture.wrapT = THREE.RepeatWrapping;
+                            texture.repeat.x = -1;
 
-            const geometry = new THREE.SphereGeometry(500, 128, 128);
-            const material = new THREE.MeshBasicMaterial({
-                map: texture,
-                side: THREE.BackSide
+                            const geometry = new THREE.SphereGeometry(500,128,128);
+                            const material = new THREE.MeshBasicMaterial({ map: texture, side: THREE.BackSide });
+                            sphereMesh = new THREE.Mesh(geometry, material);
+                            scene3D.add(sphereMesh);
+
+                            if(sceneData.paths){
+                                sceneData.paths.forEach(path=>{
+                                    const points = path.points.map(p=>new THREE.Vector3(p[0],p[1],p[2]));
+                                    const pathColor = normalizeColor(path.color);
+                                    for(let i=0;i<points.length-1;i++){
+                                        const start=points[i], end=points[i+1];
+                                        const dir = new THREE.Vector3().subVectors(end,start);
+                                        const dist = dir.length();
+                                        if(dist<0.5) continue;
+                                        const cyl = new THREE.Mesh(
+                                            new THREE.CylinderGeometry(2,2,dist,8),
+                                            new THREE.MeshStandardMaterial({color:pathColor, emissive:pathColor, emissiveIntensity:0.3})
+                                        );
+                                        const q = new THREE.Quaternion().setFromUnitVectors(new THREE.Vector3(0,1,0),dir.clone().normalize());
+                                        cyl.applyQuaternion(q);
+                                        cyl.position.copy(new THREE.Vector3().addVectors(start,end).multiplyScalar(0.5));
+                                        scene3D.add(cyl);
+                                    }
+                                });
+                            }
+
+                            if(sceneData.hotspots){
+                                setTimeout(()=>{
+                                    sceneData.hotspots.forEach(hotspot=>{
+                                        const vector = new THREE.Vector3(hotspot.position[0],hotspot.position[1],hotspot.position[2]).project(camera);
+                                        const x = (vector.x*0.5+0.5)*window.innerWidth;
+                                        const y = (-vector.y*0.5+0.5)*window.innerHeight;
+                                        if(vector.z>1||x<0||x>window.innerWidth||y<0||y>window.innerHeight) return;
+
+                                        const div=document.createElement('div');
+                                        div.className='hotspot';
+                                        div.style.left=x+'px';
+                                        div.style.top=y+'px';
+
+                                        if(hotspot.type==='NAV'){
+                                            div.style.color='#44aaff';
+                                            div.innerHTML=`<span class='hotspot-icon'>🚪</span>
+                                                <div class='hotspot-tooltip'>
+                                                    <strong>انتقال إلى: ${hotspot.targetId}</strong>
+                                                </div>`;
+                                            div.onclick=e=>{
+                                                e.stopPropagation();
+                                                const targetIndex = scenes.findIndex(s=>s.id===hotspot.targetId);
+                                                if(targetIndex!==-1) loadScene(targetIndex);
+                                            };
+                                        }
+
+                                        document.body.appendChild(div);
+                                    });
+                                },200);
+                            }
+                        },
+                        undefined,
+                        error=>{
+                            console.error('❌ فشل تحميل الصورة:', sceneData.image, error);
+                        }
+                    );
+                }
+
+                loadScene(0);
+
+                window.addEventListener('resize',()=>{
+                    camera.aspect=window.innerWidth/window.innerHeight;
+                    camera.updateProjectionMatrix();
+                    renderer.setSize(window.innerWidth,window.innerHeight);
+                });
+
+                function animate(){
+                    requestAnimationFrame(animate);
+                    controls.update();
+                    renderer.render(scene3D,camera);
+                }
+                animate();
+            })
+            .catch(error=>{
+                console.error('❌ فشل تحميل JSON:', error);
             });
-
-            sphereMesh = new THREE.Mesh(geometry, material);
-            scene3D.add(sphereMesh);
-
-            createHotspots(data);
-        },
-        undefined,
-        err => console.error("❌ فشل تحميل الصورة:", data.image)
-    );
-}
-
-function createHotspots(sceneData) {
-    if (!sceneData.hotspots) return;
-
-    sceneData.hotspots.forEach(h => {
-        const pos = new THREE.Vector3(...h.position);
-        pos.project(camera);
-
-        const x = (pos.x * 0.5 + 0.5) * window.innerWidth;
-        const y = (-pos.y * 0.5 + 0.5) * window.innerHeight;
-
-        if (pos.z > 1) return;
-
-        const div = document.createElement("div");
-        div.className = "hotspot";
-        div.style.left = x + "px";
-        div.style.top = y + "px";
-        div.innerHTML = "🚪";
-
-        div.onclick = e => {
-            e.stopPropagation();
-            const targetIndex = scenes.findIndex(s => s.id === h.targetId);
-            if (targetIndex !== -1) loadScene(targetIndex);
-        };
-
-        document.body.appendChild(div);
-    });
-}
-
-function animate() {
-    requestAnimationFrame(animate);
-    controls.update();
-    renderer.render(scene3D, camera);
-}
-
-window.addEventListener("resize", () => {
-    camera.aspect = window.innerWidth / window.innerHeight;
-    camera.updateProjectionMatrix();
-    renderer.setSize(window.innerWidth, window.innerHeight);
-});
-</script>
-
+    </script>
 </body>
 </html>
