--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-    <meta charset="UTF-8">
-    <title>جولة BIM-As-built</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://unpkg.com/three@0.128.0/build/three.min.js"></script>
-    <script src="https://unpkg.com/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
+  <meta charset="utf-8" />
+  <title>Virtual Tour</title>
+  <base href="/BIM-As-built-sempl/">
+  <style>
+    html,body { margin:0; height:100%; overflow:hidden; background:#000; }
+    canvas { display:block; }
+    .hotspot {
+      position:absolute; width:18px; height:18px;
+      background:#00e5ff; border-radius:50%;
+      transform:translate(-50%,-50%);
+      cursor:pointer;
+    }
+  </style>
 </head>
 <body>
-    <div id="container"></div>
-    <button id="autoRotateBtn">⏸️ إيقاف الدوران</button>
-    <script src="main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
