--- a/index.html
+++ b/index.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-<meta charset="utf-8">
-<title>Virtual Tour</title>
-<base href="/BIM-As-built-sempl/">
-<style>
-html,body { margin:0; height:100%; overflow:hidden; background:black; }
-.hotspot{
-  position:absolute;
-  width:18px;height:18px;
-  background:#00ffff;
-  border-radius:50%;
-  transform:translate(-50%,-50%);
-  cursor:pointer;
-}
-</style>
+    <meta charset="UTF-8">
+    <title>جولة BIM-As-built</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/three@0.128.0/build/three.min.js"></script>
+    <script src="https://unpkg.com/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
 </head>
 <body>
-
-<script type="module" src="main.js"></script>
-
+    <div id="container"></div>
+    <button id="autoRotateBtn">⏸️ إيقاف الدوران</button>
+    <script src="main.js"></script>
 </body>
 </html>
